# demo-rust-auth-service

./: Cargo.toml
src/: main.rs
src/resource/: auth_resource.rs  mod.rs
src/utils/: jwt_utils.rs
