[package]
name = "demo-rust-auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["secrets", "json"] }
jsonwebtoken = "8.2.0"
serde = "1.0.149"
chrono = "0.4.23"
